[package]
edition = "2021"
name = "handshake"
version = "0.1.0"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.86"
bytes = "1.7.1"
cipher = "0.4.4"
clap = {version = "4.5.15", features = ["derive"]}
concat-kdf = {version = "0.1.0", features = ["std"]}
ctr = "0.9.2"
futures = "0.3.30"
hex = "0.4.3"
hmac = "0.12.1"
openssl = "0.10.66"
pretty_assertions = "1.4.0"
rand = "0.8.5"
rlp = "0.5.2"
secp256k1 = {version = "0.29.0", features = ["rand-std"]}
sha2 = "0.10.8"
sha3 = "0.10.8"
thiserror = "1.0.63"
tokio = {version = "1.39.2", features = ["macros", "net", "rt-multi-thread"]}
tokio-util = {version = "0.7.11", features = ["codec"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
